# pytdx

./: .gitignore  KNOWN_ISSUES.md  pyproject.toml  setup.py
analyze/: README.md  __init__.py  bj2_7d2c.csv  example_usage.py  market_api_experimental.py  market_api_socket_experimental.py  market_flow_experiment.py  market_socket_experiment.py  tdx_pcap_analyzer.py
docs/: pytdx_exhq.md  pytdx_hq.md  pytdx_reader.md
notes/: HOW_IT_WORKS.md  README.md  SERVER_ANALYSIS.md  WIRESHARK_ANALYSIS.md
pytdx/: hq.py  params.py
pytdx/config/: hosts.py
pytdx/crawler/: base_crawler.py  history_financial_crawler.py
pytdx/parser/: base.py  get_company_info_category.py  get_company_info_content.py  get_history_minute_time_data.py  get_security_list.py  get_security_quotes.py
pytdx/reader/: daily_bar_reader.py
tests/: test_bj_market_support.py  test_daily_bar_reader_bj.py  test_get_security_list_parser.py  test_get_security_quotes_parser.py  test_hq_socket_panel_api.py
